Refactoring cleaner Beta version

--- a/.foldr/footer.html
+++ b/.foldr/footer.html
@@ -1,4 +1,8 @@
-</section>
+</div>
 <footer>
-	<h6>grid-agency.com</h6>
+	<strong>grid-agency.com</strong> - <a href="#" target="_blank">foldr.com</a>
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="/foldr/.foldr/js/scripts.min.js">
+
+</script>
