--- a/.foldr/header.html
+++ b/.foldr/header.html
@@ -1,15 +1,4 @@
-<script>
-	/*var pathArray = window.location.pathname.split( '/' );
-	var secondLevelLocation = pathArray[1];
-	console.log(secondLevelLocation);
-	document.getElementById('site').innerHTML = "ge";*/
-	//site.innerText = secondLevelLocation;
-
-var element = document.getElementById("site");
-element.innerHTML = "New Header";
-
-</script>
 <header>
-	<img class="logo" src="/foldr/.foldr/foldr.svg" alt=".foldr" />
+	<img class="logo" style="max-width: 150px;" src="/foldr/.foldr/foldr.svg" alt=".foldr" />
 </header>
-<section>
+<div class="wrapper">
