Lighter version - included gulpfile.js & sass sources

--- a/.foldr/footer.html
+++ b/.foldr/footer.html
@@ -1,8 +1,8 @@
 </div>
 <footer>
-	<strong>grid-agency.com</strong> - <a href="#" target="_blank">foldr.com</a>
+	<a href="http://www.grid-agency.com/?utm_source=.foldr&utm_campaign=github&utm_medium=footer_link" target="_blank">grid-agency.com</a> - .foldr
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="/foldr/.foldr/js/scripts.min.js">
+<script src="/.foldr/js/scripts.min.js">
 
 </script>
