Updated Default header

--- a/.foldr/header.html
+++ b/.foldr/header.html
@@ -1,4 +1,4 @@
 <header>
-	<a href="/"><img class="logo" style="max-width: 250px;" src="/.foldr/foldr.svg" alt=".foldr" /></a>
+	<a href="/"><img class="logo" style="max-width:150px;height:auto;" src="/.foldr/foldr.svg" alt=".foldr" /></a>
 </header>
 <div class="wrapper">
