Updated default footer

--- a/.foldr/footer.html
+++ b/.foldr/footer.html
@@ -1,8 +1,6 @@
 </div>
 <footer>
-	<a href="http://www.grid-agency.com/?utm_source=.foldr&utm_campaign=github&utm_medium=footer_link" target="_blank">grid-agency.com</a> - .foldr
+	<a href="http://www.grid-agency.com/?utm_source=.foldr&utm_campaign=github&utm_medium=footer_link" target="_blank">grid-agency.com</a> - <a href="https://github.com/rudyg/.foldr" target="_blank">.foldr</a>
 </footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="/.foldr/js/scripts.min.js">
-
-</script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="/.foldr/js/scripts.min.js"></script>
